@@ -26,7 +26,7 @@
 	<h1>Version information</h1>
 	<div style="text-align:center;">
 		<img src="../img/qmidiplyr.png"><br>
-		QMidiPlayer documentation for version 0.8.2<br>
+		QMidiPlayer documentation for version 0.8.5<br>
 		An MIDI player based on fluidsynth and Qt.<br>
 		Written by Chris Xiong.<br>
 	</div><br>
